# recommender_poc

./: LICENSE.md  prepare_data.ipynb  pyproject.toml  similar_users.ipynb
